Add workaround for the corner case described in this bug report

BUG: 193522

svn path=/trunk/extragear/graphics/digikam/; revision=1002330